--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
     tools:context="com.designsquad.myfinder.register">
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/edit_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -19,49 +19,50 @@
         android:hint="Name" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/edit_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText5"
-        android:layout_alignStart="@+id/editText5"
-        android:layout_below="@+id/editText5"
+        android:layout_alignLeft="@+id/edit_name"
+        android:layout_alignStart="@+id/edit_name"
+        android:layout_below="@+id/edit_name"
         android:layout_marginTop="19dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Address" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/edit_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText6"
-        android:layout_alignStart="@+id/editText6"
-        android:layout_below="@+id/editText6"
+        android:layout_alignLeft="@+id/edit_address"
+        android:layout_alignStart="@+id/edit_address"
+        android:layout_below="@+id/edit_address"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="Username" />
 
     <EditText
-        android:id="@+id/editText8"
+        android:id="@+id/edit_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText7"
-        android:layout_alignStart="@+id/editText7"
-        android:layout_below="@+id/editText7"
+        android:layout_alignLeft="@+id/edit_username"
+        android:layout_alignStart="@+id/edit_username"
+        android:layout_below="@+id/edit_username"
         android:layout_marginTop="26dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btn_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText8"
+        android:layout_below="@+id/edit_password"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="21dp"
         android:text="Register" />
+
 </RelativeLayout>
 
 
