--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -53,4 +53,17 @@
             android:src="@mipmap/ic_road"
             android:text="Road side assists" />
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/btn_list"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:src="@mipmap/ic_road"
+            android:text="List View"
+            />
+
+    </LinearLayout>
+
+
+</RelativeLayout>
