--- a/app/src/main/res/layout/activity_tag_location.xml
+++ b/app/src/main/res/layout/activity_tag_location.xml
@@ -1,11 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
+    android:orientation="horizontal"
     tools:context="com.DesignQuads.AssistanceFinder.TagLocation"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
 
-</android.support.constraint.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="17dp"
+        android:text="Tag New Location"
+        android:textSize="30sp"
+        android:textColor="#001a00"/>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_below="@+id/textView4"
+        android:text="What type of service your place have? Select one."
+        android:textSize="24sp"
+        android:textColor="#001a00"/>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="600dp"
+        android:layout_height="600dp"
+        android:layout_below="@+id/textView7"
+        android:orientation="vertical"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="0dp"
+        android:layout_alignLeft="@+id/textView7"
+        android:layout_alignStart="@+id/textView7">
+
+        <Button
+            android:id="@+id/ServiceStation_btn"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_alignLeft="@+id/fuelStation_btn"
+            android:layout_alignStart="@+id/fuelStation_btn"
+            android:layout_below="@+id/textView7"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="30dp"
+            android:background="#ffffff"
+            android:backgroundTint="#b3ffb3"
+            android:text="SERVICE STATION"
+            android:textColor="#001a00"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/fuelStation_btn"
+            style="@style/Widget.AppCompat.Button.Small"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/ServiceStation_btn"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
+            android:background="#ffffff"
+            android:backgroundTint="#b3ffb3"
+            android:text="FUEL STATION"
+            android:textColor="#001a00"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/roadSideAssis_btn"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_alignLeft="@+id/ServiceStation_btn"
+            android:layout_alignStart="@+id/ServiceStation_btn"
+            android:layout_below="@+id/fuelStation_btn"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
+            android:background="#ffffff"
+            android:backgroundTint="#b3ffb3"
+            android:text="ROADSIDE ASSISTANCE"
+            android:textColor="#001a00"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/Hospital_btn"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_alignLeft="@+id/roadSideAssis_btn"
+            android:layout_alignStart="@+id/roadSideAssis_btn"
+            android:layout_below="@+id/roadSideAssis_btn"
+            android:background="#ffffff"
+            android:backgroundTint="#b3ffb3"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
+            android:text="HOSPITAL"
+            android:textColor="#001a00"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/logOut_btn"
+            style="@android:style/Widget.Button"
+            android:layout_width="221dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/Hospital_btn"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="43dp"
+            android:layout_marginLeft="55dp"
+            android:elevation="0dp"
+            android:fontFamily="sans-serif"
+            android:text="Log out"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+
+
+</RelativeLayout>
