--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,45 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.designsquad.myfinder.login"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    android:background="#ffffff"
+    tools:context="com.DesignQuads.AssistanceFinder.login"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
+
+
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/UserName"
+        android:textColor="#001a00"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/edit_username"
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/btn_login"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignRight="@+id/btn_login"
+        android:layout_alignStart="@+id/textView"
+        android:layout_below="@+id/textView"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Username"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="31dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/edit_password"
-        android:layout_alignStart="@+id/edit_password"
-        android:layout_marginTop="11dp" />
+        android:hint=""
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/edit_username"
+        android:layout_alignStart="@+id/edit_username"
+        android:layout_below="@+id/edit_username"
+        android:layout_marginTop="29dp"
+        android:text="@string/Password"
+        android:textColor="#001a00"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/edit_password"
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/btn_login"
+        android:layout_alignLeft="@+id/textView10"
+        android:layout_alignRight="@+id/btn_login"
+        android:layout_alignStart="@+id/textView10"
+        android:layout_below="@+id/textView10"
         android:ems="10"
-        android:inputType="textPassword"
-        android:hint="Password"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="101dp"
-        android:layout_below="@+id/edit_username"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp" />
+        android:inputType="textPassword" />
+
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="206dp"
-        android:layout_below="@+id/edit_username"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="135dp" />
+        android:layout_centerVertical="true"
+        android:backgroundTint="#007acc"
+        android:text="Login"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="206dp" />
 </RelativeLayout>
