--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,63 +5,118 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context="com.designsquad.myfinder.register">
+    android:background="#ffffff"
+    tools:context="com.DesignQuads.AssistanceFinder.register">
 
-    <EditText
-        android:id="@+id/edit_name"
-        android:layout_width="match_parent"
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Name" />
-
-    <EditText
-        android:id="@+id/edit_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edit_name"
-        android:layout_alignStart="@+id/edit_name"
-        android:layout_below="@+id/edit_name"
-        android:layout_marginTop="19dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="Address" />
+        android:text="@string/UserName"
+        android:textColor="#001a00"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/edit_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edit_address"
-        android:layout_alignStart="@+id/edit_address"
-        android:layout_below="@+id/edit_address"
-        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Username" />
+        android:hint=""
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_username"
+        android:layout_marginTop="29dp"
+        android:text="@string/EmailAddress"
+        android:textColor="#001a00"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/edit_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView8"
+        android:ems="10"
+        android:inputType="textEmailAddress" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_email"
+        android:layout_marginTop="36dp"
+        android:text="@string/PhoneNumber"
+        android:textColor="#001a00"
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/edit_phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView9"
+        android:ems="10"
+        android:inputType="phone"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_phone"
+        android:layout_marginTop="38dp"
+        android:text="@string/Password"
+        android:textColor="#001a00"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/edit_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edit_username"
-        android:layout_alignStart="@+id/edit_username"
-        android:layout_below="@+id/edit_username"
-        android:layout_marginTop="26dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView10"
         android:ems="10"
-        android:hint="Password"
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/edit_password"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:text="Register" />
+        android:layout_marginLeft="66dp"
+        android:layout_marginStart="66dp"
+        android:background="@android:color/holo_green_dark"
+        android:backgroundTint="#2eb82e"
+        android:fontFamily="sans-serif"
+        android:text="@string/REGISTRATION"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        android:typeface="normal" />
 
 </RelativeLayout>
 
