--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/dailog_address"
+        android:text="@string/dialog_address"
         android:textStyle="bold"
         android:textSize="25dp"
         android:layout_margin="7dp"
