--- a/app/src/main/res/layout/address_layout.xml
+++ b/app/src/main/res/layout/address_layout.xml
@@ -60,7 +60,8 @@
 
     <Button
         android:id="@+id/Address_save"
-        android:layout_width="match_parent"
+        android:layout_width="213dp"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@color/colorAccent"
