--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,7 +4,8 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_service"
-            android:title="Service Station" />
+            android:title="Service Station"
+            android:icon="@drawable/icon"/>
         <item
             android:id="@+id/nav_fuel"
             android:title="Fuel Station" />
@@ -25,7 +26,7 @@
         <menu>
             <item
                 android:id="@+id/nav_login"
-                android:title="Account Login" />
+                android:title="Login" />
             <item
                 android:id="@+id/nav_register"
                 android:title="Registration" />
