--- a/app/src/debug/res/layout/activity_opening_hrs__dialog.xml
+++ b/app/src/debug/res/layout/activity_opening_hrs__dialog.xml
@@ -92,21 +92,48 @@
         android:textSize="25dp"
         android:layout_margin="7dp"
         />
-    <EditText
-        android:id="@+id/WEamOpening"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Opening Time in AM"
-        android:inputType="time" />
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/WEamClosing"
+
+        <EditText
+            android:id="@+id/WEamOpening"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Opening Time"
+            android:inputType="time" />
+
+        <Spinner
+            android:id="@+id/spinner3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/am_pm" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Closing Time in PM"
-        android:inputType="time" />
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/WEpmClosing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Closing Time"
+            android:inputType="time" />
+
+        <Spinner
+            android:id="@+id/spinner4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/am_pm" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/Hours_save"
