Intro Splash screen is added..

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,11 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:layout_marginRight="23dp"
     android:background="#ffffff"
     tools:context="com.DesignQuads.AssistanceFinder.ProfileActivity"
     android:weightSum="1">
 
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="80dp"
+       android:layout_marginTop="10dp"
+       android:layout_marginLeft="10dp"
+       android:layout_marginRight="10dp"
+       android:id="@+id/linearLayout3"
+       android:background="@drawable/customborder"
+       >
     <TextView
         android:id="@+id/textView2"
         android:layout_width="160dp"
@@ -19,7 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="30dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:lineSpacingExtra="8sp"
         android:text="@string/Welcome"
         android:textColor="#001a00"
@@ -31,6 +39,7 @@
         android:id="@+id/tvUserName"
         android:layout_width="160dp"
         android:layout_height="40dp"
+        android:layout_marginTop="16dp"
         android:layout_alignBaseline="@+id/textView2"
         android:layout_alignBottom="@+id/textView2"
         android:layout_toEndOf="@+id/textView2"
@@ -41,18 +50,23 @@
         android:textSize="30sp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="48dp" />
+   </LinearLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        >
     <Button
         android:id="@+id/tag_btn"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="180dp"
+        android:layout_width="320dp"
         android:layout_height="70dp"
-        android:layout_alignEnd="@+id/tvUserName"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_alignRight="@+id/tvUserName"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="41dp"
+        android:gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="150dp"
         android:background="#00b300"
         android:elevation="0dp"
         android:fontFamily="sans-serif-condensed"
@@ -62,7 +76,7 @@
     <Button
         android:id="@+id/editTag_btn"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="180dp"
+        android:layout_width="320dp"
         android:layout_height="70dp"
         android:layout_alignEnd="@+id/tag_btn"
         android:layout_alignLeft="@+id/tag_btn"
@@ -78,7 +92,7 @@
     <Button
         android:id="@+id/unTag_btn"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="180dp"
+        android:layout_width="320dp"
         android:layout_height="70dp"
         android:layout_alignEnd="@+id/editTag_btn"
         android:layout_alignLeft="@+id/editTag_btn"
@@ -92,17 +106,34 @@
         android:textColor="#ffffff"
         android:textSize="24sp" />
 
+
     <Button
         android:id="@+id/logOut_btn"
         style="@android:style/Widget.Button"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/unTag_btn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="17dp"
         android:elevation="0dp"
         android:fontFamily="sans-serif"
         android:text="Log out"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginBottom="100dp"
+        android:layout_marginTop="457dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginLeft="120dp"
+         />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/tag_btn"
+        android:layout_alignLeft="@+id/tag_btn"
+        android:layout_alignRight="@+id/tag_btn"
+        android:layout_alignStart="@+id/tag_btn"
+        android:layout_marginTop="100dp"
+        android:textColor="#001a00"
+        android:textSize="20sp"
+        android:text="What would you like to do ?" />
+    </RelativeLayout>
 
 </RelativeLayout>
