--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,68 +11,137 @@
 
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:text="@string/UserName"
-        android:textColor="#001a00"
-        android:textSize="18sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/edit_username"
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.5"
+            android:background="@android:color/holo_blue_light"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@android:color/white"/>
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/btn_login"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignRight="@+id/btn_login"
-        android:layout_alignStart="@+id/textView"
-        android:layout_below="@+id/textView"
-        android:ems="10"
-        android:hint=""
-        android:inputType="textPersonName" />
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_above="@+id/loginLayout"
+        android:layout_marginBottom="60dp">
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/edit_username"
-        android:layout_alignStart="@+id/edit_username"
-        android:layout_below="@+id/edit_username"
-        android:layout_marginTop="29dp"
-        android:text="@string/Password"
-        android:textColor="#001a00"
-        android:textSize="18sp" />
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginStart="100dp"
+            android:layout_weight="1"
+            android:fontFamily="cursive"
+            android:lineSpacingExtra="0sp"
 
-    <EditText
-        android:id="@+id/edit_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/btn_login"
-        android:layout_alignLeft="@+id/textView10"
-        android:layout_alignRight="@+id/btn_login"
-        android:layout_alignStart="@+id/textView10"
-        android:layout_below="@+id/textView10"
-        android:ems="10"
-        android:inputType="textPassword" />
-
-
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
+            android:text="User"
+            android:textColor="@android:color/white"
+            android:textSize="20dp" />
+        <TextView
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="100dp"
+            android:text="Login"
+            android:textColor="@android:color/white"
+            android:textSize="30dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="250dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:backgroundTint="#007acc"
-        android:text="Login"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="206dp" />
+        android:background="@drawable/login"
+        android:orientation="vertical"
+        android:id="@+id/loginLayout"
+        android:padding="30dp">
+
+        <EditText
+            android:id="@+id/edit_username"
+            android:layout_width="250dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:hint="Username"
+            android:paddingRight="10dp"
+            android:drawableRight="@drawable/ic_person_outline_black_24dp"
+            android:textColor="@android:color/white"
+            android:textColorHint="@android:color/white"
+            android:inputType="textPersonName"/>
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <EditText
+                    android:id="@+id/edit_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingRight="40dp"
+                    android:textColor="@android:color/white"
+                    android:hint="Password"
+                    android:textColorHint="@android:color/white"
+                    android:inputType="textPassword"/>
+
+                <Button
+                    android:id="@+id/eyeButton"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/ic_remove_red_eye_black_24dp"/>
+                />
+            </RelativeLayout>
+        </LinearLayout>
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="220dp"
+            android:layout_height="0dp"
+            android:onClick="loginClicked"
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/shadow"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:text="login"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/facebook"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="0dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/loginLayout">
+        <Button
+            android:id="@+id/btn_SignUp"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:text="Sign-up"
+            android:textColor="@android:color/white"
+            android:background="@drawable/facebook"
+            android:layout_weight="1"/>
+    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/facebook"
+        android:layout_centerHorizontal="true"
+        android:text="Forgot Password?"/>
 </RelativeLayout>
