--- a/app/src/main/res/layout/activity_road_side.xml
+++ b/app/src/main/res/layout/activity_road_side.xml
@@ -30,58 +30,39 @@
             android:textSize="24sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/roadsideServiceName"
-        android:textColor="#001a00"
-        android:textSize="18sp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="70dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+
 
     <EditText
         android:id="@+id/edit_PlaceName"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
         android:ems="10"
-        android:hint=""
+        android:hint="@string/roadsideServiceName"
         android:inputType="textPersonName"
-        android:layout_marginBottom="5dp"
+        android:textColor="#001a00"
+        android:layout_marginTop="90dp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp" />
 
 
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/PhoneNumber"
-        android:textColor="#001a00"
-        android:textSize="18sp"
-        android:layout_below="@+id/edit_PlaceName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/edit_phone"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="@string/PhoneNumber"
+        android:textColor="#001a00"
         android:inputType="phone"
         android:layout_below="@+id/textView9"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="11dp" />
+        android:layout_marginTop="140dp"
+        android:layout_marginBottom="0dp"/>
 
 
     <Button
@@ -89,10 +70,11 @@
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/OpeningHrs_btn"
+
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="180dp"
         android:background="@drawable/common_full_open_on_phone"
         android:elevation="0dp"
         android:text="@string/address"
@@ -104,15 +86,34 @@
         android:id="@+id/OpeningHrs_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/Submit_btn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="21dp"
+        android:layout_marginTop="230dp"
         android:textSize="18sp"
         android:background="@drawable/common_full_open_on_phone"
         android:text="Opening Hours"
         android:textStyle="normal"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="290dp">
+
+
+
+           <Spinner
+               android:id="@+id/Road_spinner"
+               android:layout_width="match_parent"
+               android:layout_height="50dp"
+               android:entries="@array/services"
+               />
+
+        </LinearLayout>
+
     <Button
         android:id="@+id/Submit_btn"
         style="@android:style/Widget.Holo.Button"
