--- a/app/src/main/res/layout/activity_service_station.xml
+++ b/app/src/main/res/layout/activity_service_station.xml
@@ -30,58 +30,37 @@
             android:textSize="24sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/StationName"
-        android:textColor="#001a00"
-        android:textSize="18sp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="70dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp">
     <EditText
         android:id="@+id/edit_PlaceName"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/StationName"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="5dp"
+        tools:layout_editor_absoluteY="0dp"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/textView"
-        android:ems="10"
-        android:hint=""
-        android:inputType="textPersonName"
-        android:layout_marginBottom="5dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_marginTop="20dp"/>
 
-
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/PhoneNumber"
-        android:textColor="#001a00"
-        android:textSize="18sp"
-        android:layout_below="@+id/edit_PlaceName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/edit_phone"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="@string/PhoneNumber"
         android:inputType="phone"
-        android:layout_below="@+id/textView9"
+        android:layout_below="@+id/edit_PlaceName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="11dp" />
+        android:layout_marginTop="10dp" />
 
 
     <Button
@@ -89,30 +68,44 @@
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/OpeningHrs_btn"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="16dp"
         android:background="@drawable/common_full_open_on_phone"
         android:elevation="0dp"
         android:text="@string/address"
         android:textStyle="normal"
         android:textSize="18sp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:layout_below="@+id/edit_phone"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
 
     <Button
         android:id="@+id/OpeningHrs_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/Submit_btn"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="21dp"
         android:textSize="18sp"
         android:background="@drawable/common_full_open_on_phone"
         android:text="Opening Hours"
         android:textStyle="normal"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:layout_below="@+id/Address_btn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/CarModels_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:background="@drawable/common_full_open_on_phone"
+        android:text="Car models you fix."
+        android:textStyle="normal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:layout_below="@+id/OpeningHrs_btn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:entries="@array/Model_name"/>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/Submit_btn"
@@ -121,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:text="SUBMIT FORM" />
 
 
